<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/serverUrlTxtEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_serverUrl"
            android:inputType="textWebEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!--<EditText-->
            <!--android:id="@+id/password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:background="@color/white"-->
            <!--android:hint="@string/hint_password"-->
            <!--android:inputType="textPassword"-->
            <!--android:padding="10dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/input_login"-->
            <!--android:textColorHint="@color/input_login_hint" />-->
        <!---->

        <!-- Logout Button -->
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <!-- Update & Save Settings Button -->
        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/hint_saveSettings"
            android:background="@color/btn_save_settings"/>


    </LinearLayout>



</LinearLayout>